--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -1,14 +1,17 @@
 <div class="container mx-auto flex justify-center ">
-  <div class="w-2/3 p-4 mt-28 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
+  <div class="min-w-2/3 p-4 mt-28 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
     <div class="flex justify-between items-center mb-4">
       <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Hosts under monitoring</h5>
-      <a href="/api/add_monitor" class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
-          focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
-        </svg>
-        Add new host
-      </a>
+
+      <form action="/api/add_monitor" method="POST">
+        <button  class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
+            focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
+          </svg>
+          Add new host
+        </button>
+      </form>
  </div>
  <div class="flow-root">
     <table role="list" class="divide-y divide-gray-200 dark:divide-gray-700 w-full">
@@ -55,6 +58,7 @@
                 
                 <pre id="puredocpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
 docker run -d \
+  --name hothost-agent \
   -v /etc/passwd:/host/etc/passwd:ro \
   -v /etc/group:/host/etc/group:ro \
   -v /proc:/host/proc:ro \
@@ -91,9 +95,10 @@ version: '3'
 services:
   netdata:
     image: devforth/hothost-agent
+    container_name: hothost-agent
     environment:
-      - HOTHOST_SERVER_BASE: ___CURRENT_URL___ \
-      - HOTHOST_AGENT_SECRET: {{ this.secret }} \
+      - HOTHOST_SERVER_BASE: ___CURRENT_URL___
+      - HOTHOST_AGENT_SECRET: {{ this.secret }}
       - HOTHOST_MONITOR_INTERVAL: 60
     restart: unless-stopped
     cap_add:
@@ -128,10 +133,10 @@ services:
                   </button>
                 </p>
                 <pre id="bashpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
-@reboot HOTHOST_SERVER_BASE=___CURRENT_URL___\
-HOTHOST_MONITOR_INTERVAL=60\
-HOTHOST_AGENT_SECRET=HOTHOST_AGENT_SECRET: {{ this.secret }} \
-curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getinfo.sh | bash
+@reboot curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getinfo.sh | \
+HOTHOST_SERVER_BASE=___CURRENT_URL___ \
+HOTHOST_MONITOR_INTERVAL=60 \
+HOTHOST_AGENT_SECRET={{ this.secret }} bash
 </pre>
 <script>
   document.getElementById('bashpre').innerHTML = 
@@ -144,16 +149,17 @@ curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getin
 
             <p class="text-sm text-gray-500 dark:text-gray-400">
               Refresh this page to see update.
-
-              <a href="/api/remove_monitor?id={{ this.id }}"
-                class="flex mt-4 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-red-700 rounded items-center"
-              >
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-                </svg>
-                Remove
-              </a>
-
+              
+              <form action="/api/remove_monitor?id={{ this.id }}" method="POST">
+                <button
+                  class="flex mt-4 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 border border-red-700 rounded items-center"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                  </svg>
+                  Remove
+                </button>
+              </form>
             </p>
 
 
