--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -58,7 +58,7 @@
                   </button>
                 </p>
 
-                <pre id="puredocpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+                <pre id="puredocpre" data-pre-id="{{ this.id }}" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
 docker run -d \
   --env HOTHOST_SERVER_BASE=___CURRENT_URL___ \
   --env HOTHOST_AGENT_SECRET={{ this.secret }} \
@@ -74,10 +74,6 @@ docker run -d \
   --security-opt apparmor=unconfined \
   -v /etc/hostname:/host/etc/hostname:ro \
   devforth/hothost-agent</pre>
-              <script>
-                document.getElementById('puredocpre').innerHTML =
-                  document.getElementById('puredocpre').innerHTML.replace('___CURRENT_URL___', document.location.protocol + '//' + document.location.host);
-              </script>
               </div>
               <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="dashboard-{{ this.id }}" role="tabpanel" aria-labelledby="dashboard-tab-{{ this.id }}">
                 <p class="text-sm text-gray-500 dark:text-gray-400 relative">
@@ -92,15 +88,15 @@ docker run -d \
                     Copy
                   </button>
                 </p>
-                <pre id="composepre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+                <pre id="composepre" data-pre-id="{{ this.id }}" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
 version: '3'
 services:
-  netdata:
+  hothost-agent:
     image: devforth/hothost-agent
     environment:
-    - HOTHOST_SERVER_BASE: ___CURRENT_URL___
-    - HOTHOST_AGENT_SECRET: {{ this.secret }}
-    - HOTHOST_MONITOR_INTERVAL: 60
+    - HOTHOST_SERVER_BASE=___CURRENT_URL___
+    - HOTHOST_AGENT_SECRET={{ this.secret }}
+    - HOTHOST_MONITOR_INTERVAL=60
     container_name: hothost-agent
     restart: unless-stopped
     cap_add:
@@ -113,10 +109,6 @@ services:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /etc/os-release:/host/etc/os-release:ro</pre>
-              <script>
-                document.getElementById('composepre').innerHTML =
-                  document.getElementById('composepre').innerHTML.replace('___CURRENT_URL___', document.location.protocol + '//' + document.location.host);
-              </script>
               </div>
               <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="settings-{{ this.id }}" role="tabpanel" aria-labelledby="settings-tab-{{ this.id }}">
                 <p class="text-sm text-gray-500 dark:text-gray-400">
@@ -134,16 +126,16 @@ services:
                     Copy
                   </button>
                 </p>
-                <pre id="bashpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+                <pre id="bashpre" data-pre-id="{{ this.id }}" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
 @reboot curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getinfo.sh | \
-HOTHOST_SERVER_BASE=___CURRENT_URL___ \
-HOTHOST_MONITOR_INTERVAL=60 \
-HOTHOST_AGENT_SECRET={{ this.secret }} bash
-</pre>
-<script>
-  document.getElementById('bashpre').innerHTML =
-    document.getElementById('bashpre').innerHTML.replace('___CURRENT_URL___', document.location.protocol + '//' + document.location.host);
-</script>
+  HOTHOST_SERVER_BASE=___CURRENT_URL___ \
+  HOTHOST_MONITOR_INTERVAL=60 \
+  HOTHOST_AGENT_SECRET={{ this.secret }} bash</pre>
+                <script>
+                  document.querySelectorAll('[data-pre-id="{{ this.id }}"]').forEach(function (el) {
+                    el.innerHTML = el.innerHTML.replace('___CURRENT_URL___', document.location.protocol + '//' + document.location.host);
+                  });
+                </script>
                 <p>
                 </p>
               </div>
