--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -64,15 +64,13 @@ docker run -d \
   --env HOTHOST_AGENT_SECRET={{ this.secret }} \
   --env HOTHOST_MONITOR_INTERVAL=60 \
   --name hothost-agent \
-  -v /etc/passwd:/host/etc/passwd:ro \
-  -v /etc/group:/host/etc/group:ro \
   -v /proc:/host/proc:ro \
   -v /sys:/host/sys:ro \
   -v /etc/os-release:/host/etc/os-release:ro \
+  -v /etc/hostname:/host/etc/hostname:ro \
   --restart unless-stopped \
   --cap-add SYS_PTRACE \
   --security-opt apparmor=unconfined \
-  -v /etc/hostname:/host/etc/hostname:ro \
   devforth/hothost-agent</pre>
               </div>
               <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="dashboard-{{ this.id }}" role="tabpanel" aria-labelledby="dashboard-tab-{{ this.id }}">
@@ -104,11 +102,10 @@ services:
     security_opt:
       - apparmor:unconfined
     volumes:
-      - /etc/passwd:/host/etc/passwd:ro
-      - /etc/group:/host/etc/group:ro
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
-      - /etc/os-release:/host/etc/os-release:ro</pre>
+      - /etc/os-release:/host/etc/os-release:ro
+      - /etc/hostname:/host/etc/hostname:ro</pre>
               </div>
               <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="settings-{{ this.id }}" role="tabpanel" aria-labelledby="settings-tab-{{ this.id }}">
                 <p class="text-sm text-gray-500 dark:text-gray-400">
