remove border for last item

--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -159,7 +159,7 @@ services:
       </tr>
       {{else}}
         {{#if (not this.no_data)}}
-        <tr class="pt-11 border-b border-gray-200 dark:border-gray-700">
+        <tr class="pt-11 border-b last:border-b-0 border-gray-200 dark:border-gray-700">
               <td class="py-4 pr-4 flex-shrink-0">
                   <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
               </td>
