--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -158,7 +158,7 @@ services:
         {{#if (not this.no_data)}}
         <tr class="pt-11 border-b last:border-b-0 border-gray-200 dark:border-gray-700">
               <td class="py-4 pr-4 flex-shrink-0">
-                  <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
+                  <img class="w-8 h-8 rounded-full" src="/img/{{ this.icon_name }}.svg" alt="Neil image">
               </td>
               <td class="pr-5 flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
                 {{#if this.online}}
