Removed prisma in favor of lowdb

--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -6,6 +6,7 @@
   <link href="/css/output.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/flowbite.min.css" />
   <script src="/js/flowbite.js"></script>
+  <title>HotHost</title>
 
   <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
