--- a/server/html/views/plugins.html
+++ b/server/html/views/plugins.html
@@ -33,7 +33,28 @@
                   <span class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3">4.9</span>
               </div>
               <div class="flex justify-between items-center">
-                  <a href="/plugin/{{ this.id }}/" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Settings</a>
+                  {{#if this.pluginEnabled}}
+                    <a href="/plugin/{{ this.id }}/"
+                      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                    >
+                      Settings
+                    </a>
+                      
+                  {{else}}
+                    <a href="/plugin/{{ this.id }}/"
+                      class="text-white w-full bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                    >
+                      Enable
+                    </a>
+                  {{/if}}
+
+                  {{#if this.pluginEnabled}}
+                  <form method="POST">
+                    <a href="/plugin/disable/{{ this.id }}/" class="ml-5 text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
+                      Disable
+                    </a>
+                  </form>
+                  {{/if}}
               </div>
           </div>
         </div>
