add gmail plugin

--- a/server/html/views/plugin.html
+++ b/server/html/views/plugin.html
@@ -1,25 +1,28 @@
 <div class="container mx-auto flex justify-center ">
-  <div class="min-w-2/3 p-4 mt-28 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
-    <div class="flex justify-between items-center mb-4">
-      <h1 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">{{ plugin.name }} plugin</h1>
-
-      <!-- {{#if authorized}}
-      <form action="/api/add_monitor" method="POST">
-        <button  class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
-            focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
+  <div class="min-w-2/3 p-4 my-5 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
+    
+    
+    <div class="flex justify-between items-center mb-5">
+      <div>
+        <a href="/plugins/" class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
+          focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5
+          text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center"
+        >
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
           </svg>
-          Import from external file
-        </button>
-      </form>
-      {{/if}} -->
+          Back to plugins  
+        </a>
+      </div>
     </div>
+
+    <h1 class="mb-5 text-3xl font-bold leading-none text-gray-900 dark:text-white">{{ plugin.name }} plugin</h1>
+
     <div class="max-w-2/3 gap-y-5 gap-y-10 divide-gray-200 dark:divide-gray-700 flex flex-wrap text-gray-800 dark:text-gray-400">
       {{ plugin.description }}
     </div>
 
-    <article class="prose dark:prose-invert py-10 lg:prose-l ">
+    <article class="prose dark:prose-invert py-5 lg:prose-l ">
       {{{ descriptionFull }}}
     </article>
     <div>
@@ -46,6 +49,9 @@
               {{#if this.required}}required{{/if}}
               {{#if this.inputType}}type="{{ this.inputType }}"{{else}}type="text"{{/if}}
             />
+            {{#if this.notes }}
+              <div class="text-xs text-gray-500 dark:text-gray-400">{{ this.notes }} </div>
+            {{/if }}
           </div>
         {{/if }}
         {{#if (eq this.type 'bool' )}}
@@ -65,9 +71,13 @@
           </div>
         {{/if }}
       {{/each}}
-      <button class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
-            focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
-          Enable Plugin
+        <button class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
+              focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
+            {{#if pluginSettings.enabled}}
+              Save settings
+            {{else}}
+              Enable Plugin
+            {{/if}}
         </button>
       </form>
     </div>
@@ -76,16 +86,6 @@
   </div>
 </div>
 
-<div id="toast-copied" class=" fixed right-2 bottom-2 hidden flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-green-900 dark:bg-green-100" role="alert">
-  <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-100 dark:text-green-900">
-      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
-  </div>
-  <div class="ml-3 text-sm font-normal">Copied to clipboard!</div>
-  <button type="button" class="bg-transparent ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 inline-flex h-8 w-8 dark:text-green-900 dark:hover:text-black " onclick="hideCOpyTost()" aria-label="Close">
-      <span class="sr-only">Close</span>
-      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-  </button>
-</div>
 
 
 <script>
